Wed Sep 28 08:12:18 2005  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* io.c (read_buffered_data): check if reached EOF.  fixed: [ruby-dev:27334]

Wed Sep 28 07:56:52 2005  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/yaml/basenode.rb (YAML::BaseNode::match_segment): fix typo.
	  [ruby-dev:27237], [ruby-core:05854]

	* lib/yaml/tag.rb (Module#yaml_as): suppress warnings.

	* lib/yaml/types.rb (YAML::PrivateType, YAML::DomainType): ditto.

Wed Sep 28 03:23:35 2005  NAKAMURA Usaku  <usa@ruby-lang.org>

	* rubysig.h: fixed build problem with --enable-pthread on platforms
	  which don't have setitimer().

Mon Sep 26 22:32:13 2005  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* eval.c (set_trace_func): add rb_secure(4) to prevent adding
	  tracing function.

Sun Sep 25 12:05:10 2005  Masatoshi SEKI  <m_seki@mva.biglobe.ne.jp>

	* bin/erb: typo fixed.

Sun Sep 25 01:46:43 2005  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* misc/ruby-mode.el (ruby-calculate-indent): arrange deep-indent
	  closing parenthesis at same column as the opening.

Sun Sep 25 00:42:11 2005  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* misc/ruby-mode.el (ruby-expr-beg): deal with heredoc separately.
	  fixed: [ruby-list:41168]

	* misc/ruby-mode.el (ruby-calculate-indent): not to deepen indent
	  level for continuous line inside parentheses.
	  http://nabeken.tdiary.net/20050915.html#p02

Sun Sep 25 00:18:11 2005  Tanaka Akira  <akr@m17n.org>

	* eval.c (unknown_node): show more information.  [ruby-dev:26196]

Sat Sep 24 08:56:01 2005  Minero Aoki  <aamine@loveruby.net>

	* lib/fileutils.rb (cd): no longer accept :noop option, related
	  code is useless (backported from trunk, rev 1.67).
	  [ruby-core:05858] [ruby-Bugs:2494]

Sat Sep 24 08:38:07 2005  Minero Aoki  <aamine@loveruby.net>

	* lib/fileutils.rb: fix visibility of FileUtils::NoWrite, Verbose,
	  DryRun (backported from trunk, rev 1.66). [ruby-core:05954]

	* test/fileutils/test_nowrite.rb: test it.

	* test/fileutils/test_dryrun.rb: new file.
